--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -3,12 +3,12 @@ name: Java CI with Gradle
 
 # Define los eventos que dispararán este flujo de trabajo.
 on:
-  # Se ejecuta cuando se hace un push a la rama 'main' y la rama 'dev'.
+  # Se ejecuta cuando se hace un push a la rama 'main'.
   push:
-    branches: [ "main", "dev" ]
-  # Se ejecuta cuando se crea o actualiza un Pull Request que apunta a 'main' y 'dev'.
+    branches: [ "main" ]
+  # Se ejecuta cuando se crea o actualiza un Pull Request que apunta a 'main'.
   pull_request:
-    branches: [ "main", "dev" ]
+    branches: [ "main" ]
 
 # Define los trabajos (jobs) que se ejecutarán.
 jobs:
