--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -31,6 +31,9 @@ jobs:
 
       # 3. Agrega los permisos necesarios para el build.
       - name: Grant execute permission for gradlew
+        env:
+          API_SECURITY_JWT_SECRET_KEY: ${{ secrets.API_SECURITY_JWT_SECRET_KEY }}
+          API_SECURITY_KEY: ${{ secrets.API_SECURITY_KEY }}
         run: chmod +x ./gradlew
 
       # 4. Ejecuta el comando de compilación y pruebas de Gradle usando el wrapper.
