--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,9 @@ out/
 /nbbuild/
 /dist/
 /nbdist/
-/.nb-gradle/
+/.nb-gradle/# Ignore local properties file
+/src/main/resources/application-local.properties
+
 
 ### VS Code ###
 .vscode/
