--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -30,9 +30,9 @@ name: SonarCloud analysis
 
 on:
   push:
-    branches: [ "main" ]
+      branches: [ "main", "dev" ]
   pull_request:
-    branches: [ "main" ]
+      branches: [ "main", "dev" ]
   workflow_dispatch:
 
 permissions:
@@ -57,6 +57,7 @@ jobs:
             # mandatory
             -Dsonar.projectKey=unq-dapp-grupoM_futbol-api
             -Dsonar.organization=unq-dapp-grupom
+            -Dsonar.coverage.jacoco.xmlReportPaths=build/reports/jacoco/test/jacocoTestReport.xml
             # Comma-separated paths to directories containing main source files.
             #-Dsonar.sources= # optional, default is project base directory
             # Comma-separated paths to directories containing test source files.
