--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,8 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.5.5'
 	id 'io.spring.dependency-management' version '1.1.7'
+	id "jacoco"
+	id "org.sonarqube" version "6.3.1.5724"
 }
 
 group = 'com.dapp'
@@ -59,3 +61,13 @@ dependencies {
 tasks.named('test') {
 	useJUnitPlatform()
 }
+
+jacocoTestReport {
+    reports {
+        xml.required = true
+		html.required = true
+    }
+	dependsOn test
+}
+
+check.dependsOn jacocoTestReport
