--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -2,9 +2,11 @@ name: Java CI with Gradle
 
 on:
   push:
-     branches: [ "main", "dev" ]
+     branches: 
+     - main
   pull_request:
-     branches: [ "main", "dev" ]
+     branches:
+      - main
 
 jobs:
   build-and-test:
