--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -30,9 +30,11 @@ name: SonarCloud analysis
 
 on:
   push:
-      branches: [ "main", "dev" ]
+     branches:
+     - main
   pull_request:
-      branches: [ "main", "dev" ]
+     branches:
+      - main
   workflow_dispatch:
 
 permissions:
