--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -60,6 +60,8 @@ jobs:
             -Dsonar.projectKey=unq-dapp-grupoM_futbol-api
             -Dsonar.organization=unq-dapp-grupom
             -Dsonar.coverage.jacoco.xmlReportPaths=build/reports/jacoco/test/jacocoTestReport.xml
+            -Dsonar.sources=src/main/java
+            -Dsonar.scm.provider=git
             # Comma-separated paths to directories containing main source files.
             #-Dsonar.sources= # optional, default is project base directory
             # Comma-separated paths to directories containing test source files.
