Update SonarCloud config in GitHub workflows
Replaces 'sonarqube' with 'sonar' and adds organization property in gradle.yml. Removes redundant 'sonar.sources' property from sonarcloud.yml for improved configuration consistency.

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -46,5 +46,6 @@ jobs:
           API_SECURITY_KEY: ${{ secrets.API_SECURITY_KEY }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: |
-          ./gradlew build jacocoTestReport sonarqube \
-            -Dsonar.coverage.jacoco.xmlReportPaths=build/reports/jacoco/test/jacocoTestReport.xml
+          ./gradlew build jacocoTestReport sonar \
+            -Dsonar.coverage.jacoco.xmlReportPaths=build/reports/jacoco/test/jacocoTestReport.xml \
+            -Dsonar.organization=unq-dapp-grupom
