Update CI workflows and Gradle config for SonarCloud
Improves GitHub Actions workflows by adding SonarQube cache, updating Gradle build and analysis steps, and removing explicit JaCoCo coverage path from SonarCloud workflow. Updates build.gradle to finalize tests with JaCoCo report and configures Sonar properties directly in the Gradle file.

--- a/build.gradle
+++ b/build.gradle
@@ -60,6 +60,14 @@ dependencies {
 
 tasks.named('test') {
 	useJUnitPlatform()
+	finalizedBy jacocoTestReport
+}
+
+sonar {
+  properties {
+    property "sonar.projectKey", "unq-dapp-grupoM_futbol-api"
+    property "sonar.organization", "unq-dapp-grupom"
+  }
 }
 
 jacocoTestReport {
@@ -69,5 +77,3 @@ jacocoTestReport {
     }
 	dependsOn test
 }
-
-check.dependsOn jacocoTestReport
