--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -16,6 +16,8 @@ jobs:
       # 1. Clones your repository on the virtual machine.
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
 
       # 2. Set up the JDK. Your project uses Java 21.
       - name: Set up JDK 21
@@ -31,7 +33,15 @@ jobs:
           API_SECURITY_KEY: ${{ secrets.API_SECURITY_KEY }}
         run: chmod +x ./gradlew
 
-      # 4. Cache Gradle packages
+      # 4. Cache SonarQube packages
+      - name: Cache SonarQube packages
+        uses: actions/cache@v4
+        with:
+          path: ~/.sonar/cache
+          key: ${{ runner.os }}-sonar
+          restore-keys: ${{ runner.os }}-sonar
+
+      # 5. Cache Gradle packages
       - name: Cache Gradle packages
         uses: actions/cache@v4
         with:
@@ -39,13 +49,10 @@ jobs:
           key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
           restore-keys: ${{ runner.os }}-gradle
 
-      # 5. Build, test, coverage & SonarCloud analysis in a single step
-      - name: Build, coverage and analyze
+      # 6. Build and analyze
+      - name: Build and analyze
         env:
           API_SECURITY_JWT_SECRET_KEY: ${{ secrets.API_SECURITY_JWT_SECRET_KEY }}
           API_SECURITY_KEY: ${{ secrets.API_SECURITY_KEY }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: |
-          ./gradlew build jacocoTestReport sonar \
-            -Dsonar.coverage.jacoco.xmlReportPaths=build/reports/jacoco/test/jacocoTestReport.xml \
-            -Dsonar.organization=unq-dapp-grupom
+        run: ./gradlew build sonar --info
