--- a/render.yaml
+++ b/render.yaml
@@ -5,16 +5,14 @@ services:
   # Un servicio web para la API de fútbol
   - type: web
     name: futbol-api
-    # Entorno de ejecución: Docker
-    env: docker
-    # Opcional: Especifica la rama a observar para despliegues automáticos
-    # autoDeploy: true # Descomenta si quieres que Render despliegue en cada push a la rama
-    # branch: main
+    # Entorno de ejecución: Imagen Docker pre-construida
+    env: image
+    # URL de la imagen en GitHub Container Registry
+    # Reemplaza 'TU_USUARIO_DE_GITHUB/futbol-api' con tu usuario y nombre de repo
+    image:
+      url: ghcr.io/TU_USUARIO_DE_GITHUB/futbol-api:main
     # Configuración de salud para que Render sepa si tu app está lista
     healthCheckPath: /actuator/health # Asegúrate de tener Spring Boot Actuator
-    # Configuración de Docker
-    dockerContext: .
-    dockerfilePath: ./Dockerfile
     # Variables de entorno (si las necesitas)
     envVars:
       - key: SERVER_PORT
