Migration from Scrape to PlayWright

--- a/build.gradle
+++ b/build.gradle
@@ -20,11 +20,6 @@ repositories {
 	mavenCentral()
 }
 
-ext {
-	jjwtVersion = '0.12.5'
-	springdocVersion = '2.8.13'
-}
-
 dependencies {
 
 	// Spring Boot Starters
@@ -33,17 +28,13 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 
 	// JWT (JSON Web Token)
-	implementation "io.jsonwebtoken:jjwt-api:${jjwtVersion}"
+	implementation 'io.jsonwebtoken:jjwt-api:0.12.5'
+	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.5'
+	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.5'
 
-	// Swagger / OpenAPI 3
-	implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:${springdocVersion}"
-	runtimeOnly "io.jsonwebtoken:jjwt-impl:${jjwtVersion}"
-	runtimeOnly "io.jsonwebtoken:jjwt-jackson:${jjwtVersion}"
-
-	// Web Scraping
-	implementation 'org.htmlunit:htmlunit:3.11.0'
-	implementation 'org.seleniumhq.selenium:selenium-java:4.35.0'
-	implementation 'org.seleniumhq.selenium:selenium-support:4.35.0'
+	// Swagger / OpenAPI 3 & Web Scraping
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.0'
+	implementation 'com.microsoft.playwright:playwright:1.45.0'
 
 	// Herramientas y Base de Datos
 	compileOnly 'org.projectlombok:lombok'
