--- a/render.yaml
+++ b/render.yaml
@@ -11,12 +11,13 @@ services:
   # Un servicio web para la API de fútbol
   - type: web
     name: futbol-api
+    # El repositorio de origen. Es buena práctica incluirlo.
+    repo: https://github.com/unq-dapp-grupoM/futbol-api
     # Entorno de ejecución: Imagen Docker pre-construida
     env: image
     # Especifica el plan gratuito para evitar cargos y la necesidad de una tarjeta de crédito.
     plan: free
     # URL de la imagen en GitHub Container Registry
-    # Reemplaza 'TU_USUARIO_DE_GITHUB/futbol-api' con tu usuario y nombre de repo
     image:
       url: ghcr.io/unq-dapp-grupom/futbol-api:main
     registryCredential:
