--- a/render.yaml
+++ b/render.yaml
@@ -1,28 +1,30 @@
 # render.yaml
 # Documentación: https://render.com/docs/blueprint-spec
+# Esta línea es crucial para que Render interprete correctamente el archivo.
 version: "1"
 
 registries:
   # Define una credencial para acceder a GitHub Container Registry (ghcr.io)
-  - name: github-cr # Un nombre para esta credencial
+  - name: github-cr # Nombre que le damos a nuestra credencial de ghcr.io
     url: ghcr.io
     github: true # Indica a Render que use la cuenta de GitHub conectada
 
 services:
-  - name: futbol-api # Un servicio web para la API de fútbol
+  # Define el servicio web que se desplegará.
+  - name: futbol-api
     type: web
-    env: image # Entorno de ejecución: Imagen Docker pre-construida
-    plan: free # Especifica el plan gratuito para evitar cargos
-    repo: https://github.com/unq-dapp-grupoM/futbol-api # El repositorio de origen
-    healthCheckPath: /actuator/health # Ruta para que Render sepa si tu app está lista
+    plan: free # Usa el plan gratuito para evitar cargos.
+    env: image # Indica a Render que use una imagen de Docker pre-construida.
+    repo: https://github.com/unq-dapp-grupoM/futbol-api # Repositorio de origen (buena práctica).
+    # Desactiva el auto-despliegue de Render, ya que lo controlaremos con el Deploy Hook desde GitHub Actions.
+    autoDeploy: false
     image:
       url: ghcr.io/unq-dapp-grupom/futbol-api:main # URL de la imagen en GitHub Container Registry
     registryCredential:
-      name: github-cr # Referencia a la credencial definida en la sección 'registries'
-    envVars: # Variables de entorno
-      - key: SERVER_PORT
-        value: 10000 # Render asigna el puerto dinámicamente, pero es buena práctica definirlo.
+      name: github-cr # Usa las credenciales 'github-cr' definidas arriba.
+    healthCheckPath: /actuator/health # Ruta para que Render sepa si tu app está lista.
+    envVars:
+      - key: API_KEY
+        fromSecret: true # Indica que el valor de API_KEY se tomará de los "Secret Files" de Render.
       - key: SPRING_PROFILES_ACTIVE
-        value: production
-      - key: API_KEY # Ejemplo de variable de entorno secreta
-        fromSecret: true # El valor se tomará de los Secretos de Render
+        value: production # Activa el perfil de producción de Spring.
