--- a/render.yaml
+++ b/render.yaml
@@ -1,12 +1,6 @@
 # Esta línea es crucial para que Render interprete correctamente el archivo.
 version: "1"
 
-registries:
-  # Define una credencial para acceder a GitHub Container Registry (ghcr.io)
-  - name: github-cr # Nombre que le damos a nuestra credencial de ghcr.io
-    url: ghcr.io
-    github: true # Indica a Render que use la cuenta de GitHub conectada
-
 services:
   # Define el servicio web que se desplegará.
   - name: futbol-api
@@ -18,8 +12,10 @@ services:
     autoDeploy: false
     image:
       url: ghcr.io/unq-dapp-grupom/futbol-api:main # URL de la imagen en GitHub Container Registry
+    # Define las credenciales para acceder al registro de Docker directamente en el servicio.
     registryCredential:
-      name: github-cr # Usa las credenciales 'github-cr' definidas arriba.
+      name: github-cr # Un nombre descriptivo para la credencial.
+      username: ${{ github.actor }} # El actor de GitHub que sube la imagen.
     healthCheckPath: /actuator/health # Ruta para que Render sepa si tu app está lista.
     envVars:
       - key: API_KEY
