Update render.yaml and main-ci-cd.yml functional

--- a/render.yaml
+++ b/render.yaml
@@ -1,27 +1,24 @@
 # Esta línea es crucial para que Render interprete correctamente el archivo.
 version: "1"
 
-registries:
-  # Define una credencial para acceder a GitHub Container Registry (ghcr.io)
-  - name: github-cr # Nombre que le damos a nuestra credencial de ghcr.io
-    url: ghcr.io
-    github: true # Indica a Render que use la cuenta de GitHub conectada
-
 services:
   # Define el servicio web que se desplegará.
   - name: futbol-api
     type: web
     plan: free # Usa el plan gratuito para evitar cargos.
     env: image # Indica a Render que use una imagen de Docker pre-construida.
-    # Desactiva el auto-despliegue de Render, ya que lo controlaremos con el Deploy Hook desde GitHub Actions.
     autoDeploy: false
     image:
       url: ghcr.io/unq-dapp-grupom/futbol-api:main # URL de la imagen en GitHub Container Registry
-    registryCredential:
-      name: github-cr # Usa las credenciales 'github-cr' definidas arriba.
     healthCheckPath: /actuator/health # Ruta para que Render sepa si tu app está lista.
-    # Las variables de entorno se gestionarán directamente en el Dashboard de Render.
-    # Esto evita problemas de validación con los secretos en el blueprint.
     envVars:
       - key: SPRING_PROFILES_ACTIVE
         value: production # Activa el perfil de producción de Spring.
+      # Inyectamos las credenciales para el registro de Docker como variables de entorno.
+      # Render las usará para autenticarse en ghcr.io.
+      - key: DOCKER_REGISTRY
+        value: ghcr.io
+      - key: DOCKER_USERNAME
+        value: ${{ github.actor }} # El usuario de GitHub que ejecuta el pipeline.
+      - key: DOCKER_PASSWORD
+        fromSecret: true # El valor se tomará del secreto GITHUB_TOKEN.
