--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,6 @@ api.security.jwt.expiration-ms=86400000
 
 # API Key Configuration
 api.security.key=${API_SECURITY_KEY}
+
+# scraper.service.url=https://futbol-api-main.onrender.com
+scraper.service.url=http://localhost:8081
