Production profile settings for Render

--- a/src/main/resources/application-production.properties
+++ b/src/main/resources/application-production.properties
@@ -1,2 +1,4 @@
-# Production specific properties
-scraper.service.url=https://futbol-api-scraper.onrender.com
+# Configuración específica para el entorno de producción en Render
+
+# Apunta al scraper-service desplegado en Render
+scraper.service.url=https://scraper-service-se1w.onrender.com
