--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,5 +11,5 @@ api.security.jwt.expiration-ms=86400000
 # API Key Configuration
 api.security.key=${API_SECURITY_KEY}
 
-# scraper.service.url=https://futbol-api-main.onrender.com
+# Apunta al scraper-service local para desarrollo
 scraper.service.url=http://localhost:8081
