Refactor English logs and comments

--- a/render.yaml
+++ b/render.yaml
@@ -1,21 +1,21 @@
-# Esta línea es crucial para que Render interprete correctamente el archivo.
+# This line is crucial for Render to correctly interpret the file.
 version: "1"
 
 services:
-  # Define el servicio web que se desplegará.
+  # Defines the web service to be deployed.
   - name: futbol-api
     type: web
-    plan: free # Usa el plan gratuito para evitar cargos.
-    env: image # Indica a Render que use una imagen de Docker pre-construida.
-    autoDeploy: false # Desactiva el auto-despliegue, lo controlamos con el Deploy Hook.
+    plan: free # Use the free plan to avoid charges.
+    env: image # Tells Render to use a pre-built Docker image.
+    autoDeploy: false # Disables auto-deploy, we control it with the Deploy Hook.
     image:
-      url: ghcr.io/unq-dapp-grupom/futbol-api:main # URL de la imagen en GitHub Container Registry
-    healthCheckPath: /actuator/health # Ruta para que Render sepa si tu app está lista.
+      url: ghcr.io/unq-dapp-grupom/futbol-api:main # URL of the image in GitHub Container Registry
+    healthCheckPath: /actuator/health # Path for Render to know if your app is ready.
     envVars:
       - key: SPRING_PROFILES_ACTIVE
-        value: production # Activa el perfil de producción de Spring.
-      # Inyecta los secretos como variables de entorno en Render.
-      # Debes crear estas variables en el dashboard de Render para tu servicio.
+        value: production # Activates the Spring production profile.
+      # Injects secrets as environment variables in Render.
+      # You must create these variables in the Render dashboard for your service.
       - key: API_SECURITY_JWT_SECRET_KEY
         fromSecret: true
       - key: API_SECURITY_KEY
