--- a/src/main/resources/application-production.properties
+++ b/src/main/resources/application-production.properties
@@ -1,4 +1,4 @@
-# Configuración específica para el entorno de producción en Render
+# Specific configuration for the production environment on Render
 
-# Apunta al scraper-service desplegado en Render
+# Points to the scraper-service deployed on Render
 scraper.service.url=https://scraper-service-se1w.onrender.com
