Update SonarQube integration and CI workflow
Replaces SonarCloud GitHub Action with SonarQubeScan in main CI/CD workflow and removes the separate sonarcloud.yml workflow. Updates build.gradle to use the latest SonarQube plugin, sets SonarCloud host and token properties, and refines JaCoCo HTML report output location. These changes streamline code analysis and coverage reporting.

--- a/.github/workflows/main-ci-cd.yml
+++ b/.github/workflows/main-ci-cd.yml
@@ -41,11 +41,15 @@ jobs:
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
-      - name: Build, test, and analyze with SonarCloud
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # Provides the token for PR analysis
+      - name: Build and generate test coverage
+        run: ./gradlew clean build jacocoTestReport
+
+      - name: SonarQubeScan
+        uses: SonarSource/sonarqube-scan-action@v6
+        env: 
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: ./gradlew build jacocoTestReport sonar --info || true
+        with:
+          projectBaseDir: .
 
   build-and-push-image:
     name: Build and Push Docker Image
