Remove SonarQube scan from CI workflow
Eliminated the SonarQube scan step from the GitHub Actions workflow. Updated build.gradle to configure Jacoco coverage report path for SonarCloud and removed usage of SONAR_TOKEN in the properties.

--- a/build.gradle
+++ b/build.gradle
@@ -57,8 +57,8 @@ sonar {
   properties {
     property "sonar.projectKey", "unq-dapp-grupoM_futbol-api"
     property "sonar.organization", "unq-dapp-grupom"
+    property 'sonar.coverage.jacoco.xmlReportPaths', 'build/reports/jacoco/test/jacocoTestReport.xml'
     property "sonar.host.url", "https://sonarcloud.io"
-    property "sonar.login", System.getenv("SONAR_TOKEN")
   }
 }
 
